Added bash configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,9 @@ set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(uptime | cut -f 5 -d " " | cut -f 1 -d ",") #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'
+if-shell '[ $(uname -s) = "Darwin" ]' \
+   "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime | cut -f 7 -d \" \" | cut -f 1 -d \",\") #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
+   "set -g status-right '#[fg=green,bg=default]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(uptime | cut -f 5 -d \" \" | cut -f 1 -d \",\") #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
 
 set -g status-style 'bg=#1E272C,fg=#6A7D89'
 set -g window-status-current-style 'fg=cyan'
@@ -30,12 +32,14 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 
 # Escape time
-set-option -sg escape-time 10
+set-option -sg escape-time 0
 
 # than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
+
+set-option -g history-limit 100000
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
@@ -65,8 +69,9 @@ set-window-option -g automatic-rename
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
-set -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",tmux-256color:Tc"
+if-shell '[ -z $SERVER_MODE ]' \
+"set -g default-terminal 'tmux-256color'; set-option -sa terminal-overrides ',xterm-256color:RGB'" \
+"set -g default-terminal 'screen-256color'"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -87,8 +92,8 @@ unbind %; bind "\\" split-window -h -c "#{pane_current_path}"
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
-bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
-bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
+bind-key -n M-k if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
+bind-key -n M-j if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
 bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
 bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
 bind-key -T copy-mode-vi M-h select-pane -L
@@ -108,18 +113,11 @@ bind-key -n M-* select-window -t 7
 bind-key -n M-) select-window -t 8
 bind-key -n M-+ select-window -t 9
 
-set-option -g update-environment 'DISPLAY WAYLAND_DISPLAY SSH_ASKPASS SSH_AUTH_SOCK DBUS_SESSION_BUS_ADDRESS'
-
-set -g @nord_tmux_show_status_content "1"
-set -g @nord_tmux_no_patched_font "1"
-
 # tmux resurrcet & continuum config
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 # set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
-
-# if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "alacritty"'
 
 # urlview configuration
 set -g @urlview-key 'v'
@@ -135,4 +133,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 
-run -b '~/.tmux/plugins/tpm/tpm'
+if-shell '[ -z $SERVER_MODE ]' "run -b '~/.tmux/plugins/tpm/tpm'"
