--- a/sway/config
+++ b/sway/config
@@ -14,7 +14,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term alacritty
+set $term st
 
 #Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
