Fixed tmux config, changed nvim's lsp config: c++ & java

--- a/tmux.conf
+++ b/tmux.conf
@@ -89,7 +89,7 @@ set -g mouse off
 unbind c; bind c new-window -c "#{pane_current_path}"
 unbind '"'; bind '-' split-window -v -c '#{pane_current_path}'
 unbind v
-unbind %; bind "\\" split-window -h -c "#{pane_current_path}"
+unbind '%'; bind \\ split-window -h -c '#{pane_current_path}'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -99,18 +99,18 @@ bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
 bind-key -n M-k if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
 bind-key -n M-j if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
 bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
-bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
+bind-key -n M-\\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
 bind-key -T copy-mode-vi M-h select-pane -L
 bind-key -T copy-mode-vi M-j select-pane -D
 bind-key -T copy-mode-vi M-k select-pane -U
 bind-key -T copy-mode-vi M-l select-pane -R
-bind-key -T copy-mode-vi M-\ select-pane -l
+bind-key -T copy-mode-vi M-\\ select-pane -l
 
 # switch windows alt+number
 bind-key -n M-& select-window -t 1
 bind-key -n M-[ select-window -t 2
-bind-key -n M-{ select-window -t 3
-bind-key -n M-} select-window -t 4
+bind-key -n M-\{ select-window -t 3
+bind-key -n M-\} select-window -t 4
 bind-key -n M-5 select-window -t 5
 bind-key -n M-6 select-window -t 6
 bind-key -n M-* select-window -t 7
