--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,4 +1,1 @@
-default-cache-ttl 3600
-enable-ssh-support
-pinentry-program /usr/bin/pinentry-gtk-2
-default-cache-ttl-ssh 10800
+gpg-agent-darwin.conf
