Added alias to zshrc

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,11 @@ font_size 13.0
 
 map super+l send_text all \x1b\x6c
 map super+h send_text all \x1b\x68
-map super+k send_text all \x1b\x6a
-map super+j send_text all \x1b\x6b
+map super+k send_text all \x1b\x6b
+map super+j send_text all \x1b\x6a
+map super+b send_text all \x1b\x62
 map ctrl+l send_text all \x0c
+
+kitty_mod ctrl+shift
+
+clear_all_shortcuts no
