--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,7 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
 if-shell '[ -z $SERVER_MODE ]' \
-"set -g default-terminal 'tmux-256color'; set-option -sa terminal-overrides ',xterm-256color:RGB'" \
-"set -g default-terminal 'screen-256color'"
+"set -g default-terminal 'tmux-256color'; set-option -sa terminal-overrides ',xterm-256color:RGB'"
 
 # border colours
 set -g pane-border-style fg=white
