Added language servers for yaml, go, json. Fixed directions on tmux windows config. Added super+x and super+a to kitty terminal. Reviewed Readme.md

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,6 +10,8 @@ map super+h send_text all \x1b\x68
 map super+k send_text all \x1b\x6b
 map super+j send_text all \x1b\x6a
 map super+b send_text all \x1b\x62
+map super+a send_text all \x1b\x61
+map super+x send_text all \x1b\x78
 map ctrl+l send_text all \x0c
 
 kitty_mod ctrl+shift
