--- a/nvim/requirements.txt
+++ b/nvim/requirements.txt
@@ -1,58 +1,60 @@
-ansible==2.8.0
-ansible-lint==4.1.0
-asn1crypto==0.24.0
+ansible==2.9.5
+ansible-lint==4.2.0
+asn1crypto==1.3.0
 atomicwrites==1.3.0
-attrs==19.1.0
-autopep8==1.4.4
-bcrypt==3.1.6
-cffi==1.12.3
-cryptography==2.7
-decorator==4.4.0
-future==0.17.1
+attrs==19.3.0
+autopep8==1.5
+bcrypt==3.1.7
+cffi==1.14.0
+cryptography==2.8
+decorator==4.4.2
+future==0.18.2
 greenlet==0.4.15
-idna==2.8
-importlib-metadata==0.17
-jedi==0.13.3
-Jinja2==2.10.1
+idna==2.9
+importlib-metadata==1.5.0
+jedi==0.15.2
+Jinja2==2.11.1
 jsonlint==0.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
-more-itertools==7.0.0
-msgpack==0.6.1
+more-itertools==8.2.0
+msgpack==1.0.0
 neovim==0.3.1
-neovim-remote==2.1.7
-networkx==2.3
-nodeenv==1.3.3
-numpy==1.16.4
+neovim-remote==2.4.0
+networkx==2.4
+nodeenv==1.3.5
+numpy==1.18.1
 NVR==0.0.6
-packaging==19.0
-pandas==0.24.2
-paramiko==2.4.2
-parso==0.4.0
-pathspec==0.5.9
-pluggy==0.12.0
-psutil==5.6.2
-py==1.8.0
-pyasn1==0.4.5
+packaging==20.1
+pandas==1.0.1
+paramiko==2.7.1
+parso==0.6.2
+pathspec==0.7.0
+pluggy==0.13.1
+psutil==5.7.0
+py==1.8.1
+pyasn1==0.4.8
 pycodestyle==2.5.0
 pycparser==2.19
-pydocstyle==3.0.0
+pydocstyle==5.0.2
 pyflakes==2.1.1
 PyNaCl==1.3.0
-pynvim==0.3.2
-pyparsing==2.4.0
-pytest==4.6.1
-python-dateutil==2.8.0
-python-jsonrpc-server==0.1.2
-python-language-server==0.26.1
-pytz==2019.1
-PyYAML==5.1
-rope==0.14.0
-ruamel.yaml==0.15.96
-scipy==1.3.0
-six==1.12.0
-snowballstemmer==1.2.1
-wcwidth==0.1.7
-yamllint==1.15.0
-yapf==0.27.0
-zipp==0.5.1
+pynvim==0.4.1
+pyparsing==2.4.6
+pytest==5.3.5
+python-dateutil==2.8.1
+python-jsonrpc-server==0.3.4
+python-language-server==0.31.8
+pytz==2019.3
+PyYAML==5.3
+rope==0.16.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+scipy==1.4.1
+six==1.14.0
+snowballstemmer==2.0.0
+ujson==1.35
+wcwidth==0.1.8
+yamllint==1.20.0
+yapf==0.29.0
+zipp==3.0.0
