Added starship prompt, modified alacritty config, modified nvim and others

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,16 @@
 include ./theme.conf
 
-font_family      Inconsolata Regular
-bold_font        Inconsolata Bold
+font_family           Courier Prime Code
+macos_option_as_alt   left
+font_size             14.0
+kitty_mod             ctrl+shift
+clear_all_shortcuts   no
 
-font_size 13.0
-
-map super+l send_text all \x1b\x6c
-map super+h send_text all \x1b\x68
-map super+k send_text all \x1b\x6b
-map super+j send_text all \x1b\x6a
-map super+b send_text all \x1b\x62
-map super+a send_text all \x1b\x61
-map super+x send_text all \x1b\x78
-map ctrl+l send_text all \x0c
-
-kitty_mod ctrl+shift
-
-clear_all_shortcuts no
+map   super+l   send_text   all   \x1b\x6c
+map   super+h   send_text   all   \x1b\x68
+map   super+k   send_text   all   \x1b\x6b
+map   super+j   send_text   all   \x1b\x6a
+map   super+b   send_text   all   \x1b\x62
+map   super+a   send_text   all   \x1b\x61
+map   super+x   send_text   all   \x1b\x78
+map   ctrl+l    send_text   all   \x0c
