--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,5 +1,13 @@
 add_newline = true
 
+[aws]
+symbol = " "
+
+[battery]
+full_symbol = ""
+charging_symbol = ""
+discharging_symbol = ""
+
 [character]
 symbol = "➜"
 error_symbol = "✗"
@@ -9,5 +17,38 @@ use_symbol_for_status = true
 [directory]
 style = "bold blue"
 
+[conda]
+symbol = " "
+
+[git_branch]
+symbol = " "
+
+[golang]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[java]
+symbol = " "
+
+[memory_usage]
+symbol = " "
+
+[nodejs]
+symbol = " "
+
 [package]
 disabled = true
+
+[php]
+symbol = " "
+
+[python]
+symbol = " "
+
+[ruby]
+symbol = " "
+
+[rust]
+symbol = " "
