--- a/tmux.conf
+++ b/tmux.conf
@@ -125,6 +125,9 @@ set -g @continuum-restore 'on'
 # urlview configuration
 set -g @urlview-key 'v'
 
+# tmux-pass configuration
+set -g @pass-hide-pw-from-preview 'on'
+
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
@@ -135,5 +138,6 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'rafi/tmux-pass'
 
 if-shell '[ -z $SERVER_MODE ]' "run -b '~/.tmux/plugins/tpm/tpm'"
