--- a/mako/config
+++ b/mako/config
@@ -1,8 +1,10 @@
-font=pango:Droid Sans 11
-background-color=#fb4934da
-text-color=#282828ff
-default-timeout=2000
-margin=0
-border-color=#282828DA
+font=pango:Courier Code 10
 anchor=bottom-right
-
+sort=+time
+default-timeout=5000
+font=Fira Code 10
+width=500
+padding=8
+border-size=0
+text-color=#FFFFFF
+background-color=#578C72
