Added ssh icon to starship, modified browser in sway

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -29,6 +29,11 @@ symbol = " "
 [hg_branch]
 symbol = " "
 
+[hostname]
+ssh_only = false
+prefix = "ﯟ "
+style = "bold blue dimmed"
+
 [java]
 symbol = " "
 
