Added support for WSL

--- a/tmux.conf
+++ b/tmux.conf
@@ -120,13 +120,15 @@ bind-key -n M-+ select-window -t 9
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 # set -g @continuum-boot 'on'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 # urlview configuration
 set -g @urlview-key 'v'
 
 # tmux-pass configuration
-set -g @pass-hide-pw-from-preview 'on'
+set -g @gopass-filter-program 'fzf'
+set -g @gopass-vertical-split-pane-key 'b'
+set -g @gopass-pane-percentage 20
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -138,6 +140,6 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'rafi/tmux-pass'
+set -g @plugin 'haru-ake/tmux-gopass'
 
 if-shell '[ -z $SERVER_MODE ]' "run -b '~/.tmux/plugins/tpm/tpm'"
