Added plugins, cleaned codebase, changed starship for powerlevel10

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,10 @@ set -g status-interval 2
 set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
-set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-left '#[fg=green]#H#[fg=white] • #[fg=yellow]#(uname -r | cut -c 1-6)#[default]'
 if-shell '[ $(uname -s) = "Darwin" ]' \
-   "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime | cut -f 6 -d \" \" | cut -f 1 -d \",\") #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
-   "set -g status-right '#[fg=green,bg=default]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(uptime | cut -f 5 -d \" \" | cut -f 1 -d \",\") #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
+   "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
+   "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 0 --cpu-mode 1 --averages-count 2 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |cut -d\" \" -f3-4 |cut -d, -f1)#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
 
 set -g status-style 'bg=#1E272C,fg=#6A7D89'
 set -g window-status-current-style 'fg=cyan'
@@ -70,7 +70,7 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
 if-shell '[ -z $SERVER_MODE ]' \
-"set -g default-terminal 'tmux-256color'; set-option -sa terminal-overrides ',xterm-256color:RGB'"
+"set -g default-terminal 'xterm-256color'; set-option -sa terminal-overrides ',*256col*:Tc'"
 
 # border colours
 set -g pane-border-style fg=white
@@ -136,9 +136,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'haru-ake/tmux-gopass'
 
