--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,7 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # rm mouse mode fail
-set -g mouse off
+set -g mouse on
 
 # fix pane_current_path on new window and splits
 unbind c; bind c new-window -c "#{pane_current_path}"
