--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,9 @@ set -g message-style 'bg=black,fg=cyan'
 set -g pane-border-style 'bg=black,fg=#1E272C'
 set -g pane-active-border-style 'bg=black,fg=#1E272C'
 
+# Default shell
+set-option -g default-shell /bin/zsh
+
 # Status bar on top
 set-option -g status-position top
 
