Minor fixes and adjustments based of WSL config

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ set -g status-right-length 140
 set -g status-left '#[fg=green]#H#[fg=white] • #[fg=yellow]#(uname -r | cut -c 1-6)#[default]'
 if-shell '[ $(uname -s) = "Darwin" ]' \
    "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
-   "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 0 --cpu-mode 1 --averages-count 2 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |cut -d\" \" -f3-4 |cut -d, -f1)#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
+   "set -g status-right '#[fg=green,bg=default]#(tmux-mem-cpu-load --mem-mode 0 --cpu-mode 1 --averages-count 2 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |perl -pe \"s/.*up\\s+([^,]*).*/up \\1/\")#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
 
 set -g status-style 'bg=#1E272C,fg=#6A7D89'
 set -g window-status-current-style 'fg=cyan'
@@ -139,6 +139,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-logging'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
