Added tmux plugging logging

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,9 +16,6 @@ set -g message-style 'bg=black,fg=cyan'
 set -g pane-border-style 'bg=black,fg=#1E272C'
 set -g pane-active-border-style 'bg=black,fg=#1E272C'
 
-# Default shell
-set-option -g default-shell /bin/zsh
-
 # Status bar on top
 set-option -g status-position top
 
@@ -85,7 +82,7 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # rm mouse mode fail
-set -g mouse on
+set -g mouse off
 
 # fix pane_current_path on new window and splits
 unbind c; bind c new-window -c "#{pane_current_path}"
@@ -140,6 +137,7 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
