--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+set-environment -g TMUX_PLUGIN_MANAGER_PATH $XDG_CONFIG_HOME/tmux/plugins/
 
 set -g status-interval 2
 set -g status-justify centre # center align window list
@@ -22,7 +22,8 @@ set-option -g status-position top
 # C-b is not acceptable -- Vim uses it
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a last-window
+# bind-key C-a last-window
+# bind-key \# last-pane
 
 # Start numbering at 1
 set -g base-index 1
@@ -55,11 +56,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# set to main-horizontal, 66% height for main pane
-bind m run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-horizontal -p 66"
-# Same thing for verical layouts
-bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
-
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # auto window rename
@@ -69,8 +65,8 @@ set-window-option -g automatic-rename
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
-if-shell '[ -z $SERVER_MODE ]' \
-"set -g default-terminal 'xterm-256color'; set-option -sa terminal-overrides ',*256col*:Tc'"
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # border colours
 set -g pane-border-style fg=white
@@ -109,39 +105,31 @@ bind-key -T copy-mode-vi M-\\ select-pane -l
 bind-key -n M-& select-window -t 1
 bind-key -n M-[ select-window -t 2
 bind-key -n M-\{ select-window -t 3
-bind-key -n M-\} select-window -t 4
-bind-key -n M-5 select-window -t 5
-bind-key -n M-6 select-window -t 6
+bind-key -n M-( select-window -t 4
+bind-key -n M-+ select-window -t 5
+bind-key -n M-= select-window -t 6
 bind-key -n M-* select-window -t 7
 bind-key -n M-) select-window -t 8
-bind-key -n M-+ select-window -t 9
+bind-key -n M-\} select-window -t 9
 
-# tmux resurrcet & continuum config
+# tmux resurrect & continuum config
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
-# set -g @continuum-boot 'on'
-set -g @continuum-restore 'off'
-
-# urlview configuration
-set -g @urlview-key 'v'
+set -g @continuum-restore 'on'
 
 # tmux-pass configuration
-set -g @gopass-filter-program 'fzf'
+set -g @gopass-filter-program 'sk'
 set -g @gopass-vertical-split-pane-key 'b'
 set -g @gopass-pane-percentage 20
 
 # Plugins
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'haru-ake/tmux-gopass'
 
-if-shell '[ -z $SERVER_MODE ]' "run -b '~/.tmux/plugins/tpm/tpm'"
+run $XDG_CONFIG_HOME/tmux/plugins/tpm/tpm
