--- a/tmux.conf
+++ b/tmux.conf
@@ -115,7 +115,7 @@ bind-key -n M-\} select-window -t 9
 # tmux resurrect & continuum config
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 # tmux-pass configuration
 set -g @gopass-filter-program 'sk'
