--- a/tmux.conf
+++ b/tmux.conf
@@ -118,7 +118,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'off'
 
 # tmux-pass configuration
-set -g @gopass-filter-program 'sk'
+set -g @gopass-filter-program 'fzf'
 set -g @gopass-vertical-split-pane-key 'b'
 set -g @gopass-pane-percentage 20
 
