Converted nvim configuration from vim to lua

--- a/tmux.conf
+++ b/tmux.conf
@@ -112,6 +112,10 @@ bind-key -n M-* select-window -t 7
 bind-key -n M-) select-window -t 8
 bind-key -n M-\} select-window -t 9
 
+# sync panes
+bind-key e setw synchronize-panes on
+bind-key E setw synchronize-panes off
+
 # tmux resurrect & continuum config
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
