Updated tmux conf and disable python3 provider for nvim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,8 +66,10 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
 set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',alacritty:RGB,xterm-256color:RGB'
+set-option -sa terminal-overrides ',alacritty:RGB'
+set-option -sa terminal-overrides ',alacritty:Tc'
 set-option -g default-shell /bin/zsh
+set-option -g focus-events on
 
 # border colours
 set -g pane-border-style fg=white
