--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -1,14 +1,27 @@
+### Variables
 set $mod Mod4
 set $alt Mod1
-
 set  $left   h
 set  $down   j
 set  $up     k
 set  $right  l
+set $term alacritty
+set $browser firefox
+set $menu wofi
+set $clipmanager clipman pick -t $menu
+set  $ws1   "1"
+set  $ws2   "2"
+set  $ws3   "3"
+set  $ws4   "4"
+set  $ws5   "5"
+set  $ws6   "6"
+set  $ws7   "7"
+set  $ws8   "8"
+set  $ws9   "9"
+set  $ws10  "10"
 
 ## Base16 Gruvbox dark, medium
 # Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
-
 set $base00 #282828
 set $base01 #3c3836
 set $base02 #504945
@@ -43,31 +56,20 @@ set $darkwhite      $base05
 set $white          $base07
 set $transparent    #00000000
 
-set $term alacritty
-
-set $menuopts -b -f -i --tb "$darkblack" --tf "$darkwhite" --fb "$darkblack" --ff "$darkwhite" --nb "$darkblack" --nf "$darkwhite" --hb "$darkblack" --hf "$darkred" --scb "$darkblack" --scf "$darkwhite" --fn "MesloLGS NF-9"
-
-set $menudesk j4-dmenu-desktop --dmenu='bemenu -p "~" $menuopts'
-set $menurun bemenu-run -p "$" $menuopts | xargs swaymsg exec
-set $passmenu passmenu -p ">" $menuopts | xargs swaymsg exec
-
-#Colors                  Title_border    Background  Text        Indicator   Child_border
-client.focused           $transparent    $darkwhite  $darkblack  $darkwhite  $darkwhite
-client.unfocused         $transparent    $darkblack  $darkwhite  $red        $darkblack
-client.focused_inactive  $transparent    $darkblack  $darkwhite  $red        $transparent
-client.urgent            $darkred        $darkred    $darkwhite  $darkred    $darkred
+set $dmenuopts -b -f -i --tb "$darkblack" --tf "$darkwhite" --fb "$darkblack" --ff "$darkwhite" --nb "$darkblack" --nf "$darkwhite" --hb "$darkblack" --hf "$darkred" --scb "$darkblack" --scf "$darkwhite" --fn "MesloLGS NF-9"
+set $dmenu bemenu-run -p "$" $menuopts | xargs swaymsg exec
 
 ### Output configuration
 output * background ~/.wallpaper.jpg fill
 
-set $laptop LVDS-1
-output $laptop pos 0 0 res 1366x768
-output HDMI-A-1 pos 1366 0 res 1920x1080
+set $m_laptop eDP-1
+# output $laptop pos 0 0 res 1366x768
+# output HDMI-A-1 pos 1366 0 res 1920x1080
 
-bindswitch --reload --locked lid:on output $laptop disable
-bindswitch --reload --locked lid:off output $laptop enable
+# bindswitch --reload --locked lid:on output $m_laptop disable
+# bindswitch --reload --locked lid:off output $m_laptop enable
 
-### Screensaver config
+### Idle config
 exec swayidle -w \
     timeout 600 'swaylock -f -c 282828' \
     timeout 900 'swaymsg "output * dpms off"' \
@@ -78,32 +80,63 @@ exec swayidle -w \
 input type:touchpad {
      accel_profile adaptive
      pointer_accel 0.6
-     click_method clickfinger
+     # click_method clickfinger
+     # drag enabled
+     # drag_lock enabled
      scroll_method two_finger
      middle_emulation enabled
      tap_button_map lrm
      tap enabled
      natural_scroll enabled
-     dwt enabled
+     # dwt enabled
 }
 
-input type:keyboard {
+input 1165:49408:ITE_Tech._Inc._ITE_Device(8910)_Keyboard {
     xkb_numlock enable
-    xkb_file $HOME/.config/xkb/icyd.xkb
-    xkb_layout us
-    xkb_variant dvp
-    xkb_options "lv3:ralt_switch,compose:102,caps:swapescape"
+    xkb_layout es,us
+    xkb_variant icyd,
+    xkb_options "lv3:ralt_switch,compose:102,caps:swapescape,shift:breaks_caps,grp:alt_space_toggle"
 }
+
+input 13027:247:GK61_Gaming_Keyboard {
+    xkb_layout es,us
+    xkb_variant icyd,
+    xkb_options "lv3:ralt_switch,compose:102,shift:breaks_caps,grp:alt_space_toggle"
+}
+
+input 9610:4102:SINO_WEALTH_USB_KEYBOARD {
+    xkb_layout es,us
+    xkb_variant icyd,
+    xkb_options "lv3:ralt_switch,compose:102,caps:swapescape,shift:breaks_caps,grp:alt_space_toggle"
+}
+
+set $TRACKBALL 1149:32792:Kensington_Expert_Wireless_TB_Mouse
+input $TRACKBALL {
+    accel_profile adaptive
+    pointer_accel 0.75
+    scroll_button button9
+    scroll_method on_button_down
+    # middle_emulation enabled
+    # left_handed enabled
+}
+
+bindsym --input-device=$TRACKBALL --whole-window BTN_SIDE seat - cursor press BTN_RIGHT
+bindsym --input-device=$TRACKBALL --whole-window --release BTN_SIDE seat - cursor release BTN_RIGHT
+bindsym --input-device=$TRACKBALL --whole-window BTN_MIDDLE seat - cursor press BTN_SIDE
+bindsym --input-device=$TRACKBALL --whole-window --release BTN_MIDDLE seat - cursor release BTN_SIDE
+bindsym --input-device=$TRACKBALL --whole-window BTN_RIGHT seat - cursor press BTN_MIDDLE
+bindsym --input-device=$TRACKBALL --whole-window --release BTN_RIGHT seat - cursor release BTN_MIDDLE
 
 ### Key bindings
 bindsym $mod+Return exec $term
 
-# kill focused window
+# Kill focused window
 bindsym $mod+Shift+q kill
 
-# start your launcher
-bindsym $alt+d exec $menurun
-bindsym $alt+Shift+d exec $menudesk
+# Start your launcher
+bindsym $mod+Space exec $menu
+bindsym $alt+d exec $dmenu
+bindsym $mod+Ctrl+Space exec $XDG_CONFIG_HOME/sway/scripts/win-switch.sh
 
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
@@ -112,7 +145,7 @@ bindsym $alt+Shift+d exec $menudesk
 # mouse button for dragging.
 floating_modifier $mod normal
 
-# reload the configuration file
+# Reload the configuration file
 bindsym $mod+Shift+c reload
 
 # exit sway (logs you out of your Wayland session)
@@ -124,41 +157,30 @@ bindsym  $mod+$down   focus  down
 bindsym  $mod+$up     focus  up
 bindsym  $mod+$right  focus  right
 
-# _move_ the focused window with the same, but add Shift
+# Move the focused window with the same, but add Shift
 bindsym  $mod+Shift+$left   move  left
 bindsym  $mod+Shift+$down   move  down
 bindsym  $mod+Shift+$up     move  up
 bindsym  $mod+Shift+$right  move  right
 
 ### Workspaces:
-set  $ws1   "1"
-set  $ws2   "2"
-set  $ws3   "3"
-set  $ws4   "4"
-set  $ws5   "5"
-set  $ws6   "6"
-set  $ws7   "7"
-set  $ws8   "8"
-set  $ws9   "9"
-set  $ws10  "10"
-
-# switch to workspace
+# Switch to workspace
 bindsym  $mod+ampersand     workspace  $ws1
 bindsym  $mod+bracketleft   workspace  $ws2
 bindsym  $mod+braceleft     workspace  $ws3
 bindsym  $mod+parenleft     workspace  $ws4
 bindsym  $mod+plus          workspace  $ws5
-bindsym  $mod+equal         workspace  $ws6
-bindsym  $mod+asterisk      workspace  $ws7
-bindsym  $mod+parenright    workspace  $ws8
-bindsym  $mod+braceright    workspace  $ws9
-bindsym  $mod+bracketright  workspace  $ws10
+bindsym  $mod+asterisk      workspace  $ws6
+bindsym  $mod+parenright    workspace  $ws7
+bindsym  $mod+braceright    workspace  $ws8
+bindsym  $mod+bracketright  workspace  $ws9
+bindsym  $mod+equal         workspace  $ws10
 
 bindsym  $alt+numbersign    workspace  back_and_forth
 bindsym  $alt+Tab           workspace  next
 bindsym  $alt+Shift+Tab     workspace  prev
 
-# move focused container to workspace
+# Move focused container to workspace
 bindsym  $mod+Shift+ampersand     move container to workspace $ws1
 bindsym  $mod+Shift+bracketleft   move container to workspace $ws2
 bindsym  $mod+Shift+braceleft     move container to workspace $ws3
@@ -183,10 +205,10 @@ bindsym  $mod+e  layout  toggle    split
 bindsym $mod+f fullscreen
 
 # Toggle the current focus between tiling and floating mode
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+f floating toggle
 
 # Swap focus between the tiling area and the floating area
-bindsym $mod+space focus mode_toggle
+bindsym $mod+Ctrl+f focus mode_toggle
 
 # move focus to the parent container
 bindsym $mod+a focus parent
@@ -214,45 +236,49 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%  && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%  && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioMute exec pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle  && pkill -RTMIN+1 i3blocks
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym $mod+Shift+Return exec "firefox"
+bindsym $mod+Shift+p exec wlogout
+bindsym $mod+x exec $clipmanager
+
 ### Gaps:
 gaps inner 6
 gaps outer 1
 default_border pixel
 
 ### Windows assign
-assign [class="(?i)st" title="Nvim Server"] $ws1
+assign [class="(?i)alacritty"] $ws1
 assign [app_id="(?i)firefox"] $ws2
 assign [app_id="qutebrowser"] $ws3
-assign [class="(?i)st" title="vifm"] $ws4
-assign [class="(?i)st" title="ncmpcpp"] $ws9
-assign [class="(?i)st" title="neomutt"] $ws10
 
 for_window [class="pinentry-*"] floating enable
 for_window [class="pinentry-*"] resize set 600 300
 
-### Binding
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%  && pkill -RTMIN+1 i3blocks
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%  && pkill -RTMIN+1 i3blocks
-bindsym XF86AudioMute exec pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle  && pkill -RTMIN+1 i3blocks
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym XF86MonBrightnessUp exec brightnessctl set +5%
-bindsym Print exec grim -o LVDS-1 /tmp/screenshot.png
-bindsym $mod+Shift+r exec $term -e "ncmpcpp"
-bindsym $mod+Shift+f exec $term -e "vifm"
-bindsym $mod+Shift+w exec "firefox"
-bindsym $mod+x exec $term -t "Nvim Server" -e nvim
+focus_follows_mouse yes
 
-bindsym $mod+Shift+p exec echo -e "Exit\nLock\nSuspend\nReboot\nShutdown" | bemenu -p "Power: " $menuopts | "/home/beto/.config/dotfiles/sway/power.sh" | xargs swaymsg exec
-bindsym $mod+F11 exec $DOTFILES/scripts/qrgen
-bindsym $mod+F10 exec $DOTFILES/scripts/browsersearch
-bindsym $mod+Shift+F7 exec $term -title "RPNCalc" -e zsh -c rpncalc
-bindsym $mod+Shift+F6 exec $term -title "Dropdown"
+### Theme
+seat seat0 xcursor_theme "Breeze_Snow"
+font pango:SourceCodePro Medium 11
+#Colors                  Title_border    Background  Text        Indicator   Child_border
+client.focused           $transparent    $darkwhite  $darkblack  $darkwhite  $darkwhite
+client.unfocused         $transparent    $darkblack  $darkwhite  $red        $darkblack
+client.focused_inactive  $transparent    $darkblack  $darkwhite  $red        $transparent
+client.urgent            $darkred        $darkred    $darkwhite  $darkred    $darkred
 
 ### Autostart:
 exec mako
-exec gammastep
+exec gammastep-indicator
 exec waybar
 exec udiskie
-exec_always /home/beto/.config/sway/clam.sh
+exec gnome-keyring-daemon --start
+exec nextcloud
+exec wl-paste -t text --watch clipman store
+exec $term -e tmux
+exec $browser
+exec_always $XDG_CONFIG_HOME/sway/scripts/clam.sh
 
 include /etc/sway/config.d/*
