--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -239,8 +239,8 @@ bindsym $mod+r mode "resize"
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%  && pkill -RTMIN+1 i3blocks
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%  && pkill -RTMIN+1 i3blocks
 bindsym XF86AudioMute exec pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle  && pkill -RTMIN+1 i3blocks
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec brightnessctl set 2%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +2%
 bindsym $mod+Shift+Return exec "firefox"
 bindsym $mod+Shift+p exec wlogout
 bindsym $mod+x exec $clipmanager
@@ -277,7 +277,7 @@ exec udiskie
 exec gnome-keyring-daemon --start
 exec nextcloud
 exec wl-paste -t text --watch clipman store
-exec $term -e tmux
+exec $term -e abduco -c nvim nvim
 exec $browser
 exec_always $XDG_CONFIG_HOME/sway/scripts/clam.sh
 
