--- a/regolith/.config/regolith/i3/config
+++ b/regolith/.config/regolith/i3/config
@@ -683,6 +683,7 @@ assign [class="^spotify"] $ws12
 assign [class="Slack"] $ws3
 assign [class="^Cisco"] $ws12
 exec --no-startup-id alacritty
+exec --no-startup-id caffeine-indicator
 exec --no-startup-id google-chrome-stable --password-store=basic %U
 
 set $m_laptop "eDP-1"
