--- a/gnupg/.gnupg/gpg.conf
+++ b/gnupg/.gnupg/gpg.conf
@@ -80,6 +80,7 @@ auto-key-locate local,pka,dane,keyserver
 #
 # no-include-attributes = do not include attribute IDs (aka "photo IDs")
 #                         when sending keys to the keyserver.
+keyserver hkps://keyserver.ubuntu.com
 keyserver hkp://keys.openpgp.org
 keyserver hkps://keys.mailvelope.com
 keyserver hkp://pgp.mit.edu
