--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ nvim/autoload
 nvim/plugged
 nvim/thesaurus
 nvim/config/plug_server.vim
-nvim/spell
+**/nvim/spell
 nvim/.netrwhist
 nvim/package*.json
 nvim/node_modules
