--- a/gnupg/.gnupg/gpg-agent.linux.conf
+++ b/gnupg/.gnupg/gpg-agent.linux.conf
@@ -1,4 +1,4 @@
 default-cache-ttl 3600
 enable-ssh-support
-pinentry-program /usr/bin/pinentry-gtk-2
+pinentry-program /bin/pinentry-gnome3
 default-cache-ttl-ssh 10800
