--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,23 +1,24 @@
 set-environment -g TMUX_PLUGIN_MANAGER_PATH $XDG_CONFIG_HOME/tmux/plugins/
 
-set -g status-interval 2
-set -g status-justify centre # center align window list
-set -g status-left-length 20
-set -g status-right-length 140
-set -g status-left '#[fg=green]#H#[fg=white] • #[fg=yellow]#(whoami)#[default]'
-if-shell '[ $(uname -s) = "Darwin" ]' \
-   "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
-   "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |perl -pe \"s/.*up\\s+([^,]*).*/up \\1/\")#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
+# set -g status-interval 2
+# set -g status-justify centre # center align window list
+# set -g status-left-length 20
+# set -g status-right-length 140
+# set -g status-left '#[fg=green]#H#[fg=white] • #[fg=yellow]#(whoami)#[default]'
+# if-shell '[ $(uname -s) = "Darwin" ]' \
+#    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
+#    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |perl -pe \"s/.*up\\s+([^,]*).*/up \\1/\")#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
 
-set -g status-style 'bg=#1E272C,fg=#6A7D89'
-set -g window-status-current-style 'fg=cyan'
-set -g mode-style 'bg=cyan,fg=black'
-set -g message-style 'bg=black,fg=cyan'
-set -g pane-border-style 'bg=black,fg=#1E272C'
-set -g pane-active-border-style 'bg=black,fg=#1E272C'
+# set -g status-style 'bg=#1E272C,fg=#6A7D89'
+set -g status-style 'bg=#333333 fg=#5eacd3'
+# set -g window-status-current-style 'fg=cyan'
+# set -g mode-style 'bg=cyan,fg=black'
+# set -g message-style 'bg=black,fg=cyan'
+# set -g pane-border-style 'bg=black,fg=#1E272C'
+# set -g pane-active-border-style 'bg=black,fg=#1E272C'
 
 # Status bar on top
-set-option -g status-position top
+# set-option -g status-position top
 
 # C-b is not acceptable -- Vim uses it
 unbind C-b
@@ -51,10 +52,10 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # hjkl pane traversal
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
@@ -72,8 +73,8 @@ set-option -g default-shell /bin/zsh
 set-option -g focus-events on
 
 # border colours
-set -g pane-border-style fg=white
-set -g pane-active-border-style "bg=default fg=blue"
+# set -g pane-border-style fg=white
+# set -g pane-active-border-style "bg=default fg=blue"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -82,7 +83,7 @@ bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 set -g set-clipboard on
 
 # rm mouse mode fail
-set -g mouse on
+# set -g mouse on
 
 # fix pane_current_path on new window and splits
 unbind c; bind c new-window -c "#{pane_current_path}"
@@ -92,18 +93,30 @@ unbind '%'; bind \\ split-window -h -c '#{pane_current_path}'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
-bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
-bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
-bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
-bind-key -n M-\\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
-bind-key -T copy-mode-vi M-h select-pane -L
-bind-key -T copy-mode-vi M-j select-pane -D
-bind-key -T copy-mode-vi M-k select-pane -U
-bind-key -T copy-mode-vi M-l select-pane -R
-bind-key -T copy-mode-vi M-\\ select-pane -l
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
+# bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
+# bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
+# bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
+# bind-key -n M-\\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
+# bind-key -T copy-mode-vi M-h select-pane -L
+# bind-key -T copy-mode-vi M-j select-pane -D
+# bind-key -T copy-mode-vi M-k select-pane -U
+# bind-key -T copy-mode-vi M-l select-pane -R
+# bind-key -T copy-mode-vi M-\\ select-pane -l
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+
 
 # switch windows alt+number
 bind-key -n M-& select-window -t 1
@@ -121,24 +134,25 @@ bind-key e setw synchronize-panes on
 bind-key E setw synchronize-panes off
 
 # tmux resurrect & continuum config
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-nvim 'session'
-set -g @continuum-restore 'off'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @resurrect-strategy-nvim 'session'
+# set -g @continuum-restore 'off'
 
 # tmux-pass configuration
-set -g @gopass-filter-program 'fzf'
-set -g @gopass-vertical-split-pane-key 'b'
-set -g @gopass-pane-percentage 20
+# set -g @gopass-filter-program 'fzf'
+# set -g @gopass-vertical-split-pane-key 'b'
+# set -g @gopass-pane-percentage 20
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'haru-ake/tmux-gopass'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'haru-ake/tmux-gopass'
 
 run $XDG_CONFIG_HOME/tmux/plugins/tpm/tpm
