Optimize Neovim init time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,7 +83,9 @@ bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 set -g set-clipboard on
 
 # rm mouse mode fail
-# set -g mouse on
+set -g mouse on
+
+bind-key -n C-l send-keys C-l
 
 # fix pane_current_path on new window and splits
 unbind c; bind c new-window -c "#{pane_current_path}"
@@ -93,30 +95,16 @@ unbind '%'; bind \\ split-window -h -c '#{pane_current_path}'
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-# bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
-# bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
-# bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
-# bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
-# bind-key -n M-\\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
-# bind-key -T copy-mode-vi M-h select-pane -L
-# bind-key -T copy-mode-vi M-j select-pane -D
-# bind-key -T copy-mode-vi M-k select-pane -U
-# bind-key -T copy-mode-vi M-l select-pane -R
-# bind-key -T copy-mode-vi M-\\ select-pane -l
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | \
+    grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
+bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
+bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
+bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
+bind-key -T copy-mode-vi M-h select-pane -L
+bind-key -T copy-mode-vi M-j select-pane -D
+bind-key -T copy-mode-vi M-k select-pane -U
+bind-key -T copy-mode-vi M-l select-pane -R
 
 # switch windows alt+number
 bind-key -n M-& select-window -t 1
@@ -139,20 +127,19 @@ bind-key E setw synchronize-panes off
 # set -g @continuum-restore 'off'
 
 # tmux-pass configuration
-# set -g @gopass-filter-program 'fzf'
-# set -g @gopass-vertical-split-pane-key 'b'
-# set -g @gopass-pane-percentage 20
+set -g @gopass-filter-program 'fzf'
+set -g @gopass-vertical-split-pane-key 'b'
+set -g @gopass-pane-percentage 20
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-logging'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-# set -g @plugin 'thewtex/tmux-mem-cpu-load'
-# set -g @plugin 'haru-ake/tmux-gopass'
+set -g @plugin 'haru-ake/tmux-gopass'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 run $XDG_CONFIG_HOME/tmux/plugins/tpm/tpm
