--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -122,9 +122,10 @@ bind-key e setw synchronize-panes on
 bind-key E setw synchronize-panes off
 
 # tmux resurrect & continuum config
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @resurrect-strategy-nvim 'session'
-# set -g @continuum-restore 'off'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'off'
+set -g @continuum-boot-options 'alacritty,fullscreen'
 
 # tmux-pass configuration
 set -g @gopass-filter-program 'fzf'
@@ -134,10 +135,10 @@ set -g @gopass-pane-percentage 20
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-logging'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'haru-ake/tmux-gopass'
 set -g @plugin 'wfxr/tmux-fzf-url'
