--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,56 @@
 set-environment -g TMUX_PLUGIN_MANAGER_PATH $XDG_CONFIG_HOME/tmux/plugins/
 
-# set -g status-interval 2
+base00="#1d2021" # ----
+base01="#3c3836" # ---
+base02="#504945" # --
+base03="#665c54" # -
+base04="#bdae93" # +
+base05="#d5c4a1" # ++
+base06="#ebdbb2" # +++
+base07="#fbf1c7" # ++++
+base08="#fb4934" # red
+base09="#fe8019" # orange
+base0A="#fabd2f" # yellow
+base0B="#b8bb26" # green
+base0C="#8ec07c" # aqua/cyan
+base0D="#83a598" # blue
+base0E="#d3869b" # purple
+base0F="#d65d0e" # brown
+
+color_dark="$base01"
+color_light="$base05"
+color_session_text="$base0C"
+color_status_text="$base0D"
+color_main="$base0D"
+color_secondary="$base0E"
+color_level_ok="$base0B"
+color_level_warn="$base09"
+color_level_stress="$base08"
+color_status_text_off="$base05"
+color_window_off_indicator="$base06"
+color_window_off_status_bg="$base03"
+color_window_off_status_current_bg="$base04"
+
+set -g status on
+set -g status-interval 5
+set -g status-position top
+set -g status-justify left
+set -g status-right-length 100
+
+set -g mode-style "fg=$color_dark,bold,bg=$color_level_stress"
+set -g status-style "fg=$color_main,bg=$color_dark"
+set -g message-style "fg=$color_dark,bold,bg=$color_level_warn"
+setw -g window-status-format " #I:#W "
+setw -g window-status-style "fg=$color_main"
+setw -g window-status-activity-style "fg=$color_level_warn"
+setw -g pane-active-border-style "fg=$color_light"
+setw -g pane-border-style "fg=$color_level_warn"
+setw -g window-status-current-style "fg=$color_dark,bold,bg=$color_main"
+set -g window-status-separator ""
+separator_powerline_left=""
+separator_powerline_right=""
+setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+
 # set -g status-justify centre # center align window list
 # set -g status-left-length 20
 # set -g status-right-length 140
@@ -9,16 +59,11 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH $XDG_CONFIG_HOME/tmux/plugins/
 #    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(guptime |cut -f6 -d\" \" |cut -f1 -d,) #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'" \
 #    "set -g status-right '#[fg=green,bg=default]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2)#[fg=white] • #[fg=yellow,bg=default]#(uptime |perl -pe \"s/.*up\\s+([^,]*).*/up \\1/\")#[fg=white] • #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'"
 
-# set -g status-style 'bg=#1E272C,fg=#6A7D89'
-set -g status-style 'bg=#333333 fg=#5eacd3'
-# set -g window-status-current-style 'fg=cyan'
-# set -g mode-style 'bg=cyan,fg=black'
-# set -g message-style 'bg=black,fg=cyan'
-# set -g pane-border-style 'bg=black,fg=#1E272C'
-# set -g pane-active-border-style 'bg=black,fg=#1E272C'
+# Set parent terminal title to reflect current window in tmux session
+set -g set-titles on
+set -g set-titles-string "#I:#W"
 
 # Status bar on top
-# set-option -g status-position top
 
 # C-b is not acceptable -- Vim uses it
 unbind C-b
@@ -96,7 +141,7 @@ unbind '%'; bind \\ split-window -h -c '#{pane_current_path}'
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | \
-    grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+    grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?|ssh|mosh?)(diff)?$'"
 bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
 bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
 bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
@@ -120,6 +165,36 @@ bind-key -n M-\} select-window -t 9
 # sync panes
 bind-key e setw synchronize-panes on
 bind-key E setw synchronize-panes off
+
+# Session is considered to be remote when we ssh into host
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file $XDG_CONFIG_HOME/tmux/tmux.remote.conf'
+
+# We want to have single prefix key "C-a", usable both for local and remote session
+# we don't want to "C-a" + "a" approach either
+# Idea is to turn off all key bindings and prefix handling on local session,
+# so that all keystrokes are passed to inner/remote session
+
+# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
+
+# Also, change some visual styles when window keys are off
+bind -T root F12  \
+    set prefix None \;\
+    set key-table off \;\
+    set status-style "fg=$color_status_text_off,bg=$color_window_off_status_bg" \;\
+    setw -g window-status-style "fg=$color_status_text_off" \;\
+    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
+    set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
+    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+    refresh-client -S \;\
+
+bind -T off F12 \
+  set -u prefix \;\
+  set -u key-table \;\
+  set -u status-style \;\
+  set -u window-status-current-style \;\
+  set -u window-status-current-format \;\
+  refresh-client -S
 
 # tmux resurrect & continuum config
 set -g @resurrect-capture-pane-contents 'on'
